syntax = "proto3";

package com.centreon.broker;

message Host {
  uint64 host_id = 1;

  enum AckType {
    ACKNOWLEDGEMENT_NONE = 0;
    ACKNOWLEDGEMENT_NORMAL = 1;
    ACKNOWLEDGEMENT_STICKY = 2;
  }
  bool acknowledged = 2;
  int32 acknowledgement_type = 3;

  bool active_checks_enabled = 4;
  bool enabled = 5;
  int32 downtime_depth = 6;
  string check_command = 7;
  int32 check_interval = 8;
  string check_period = 9;

  enum CheckType {
    CHECK_ACTIVE = 0;
    CHECK_PASSIVE = 1;
  }
  CheckType check_type = 10;
  int32 current_check_attempt = 11;
  enum State {
    UP = 0;
    DOWN = 1;
    UNREACHABLE = 2;
  }
  State current_state = 12;
  bool event_handler_enabled = 13;
  string event_handler = 14;
  double execution_time = 15;
  bool flap_detection_enabled = 16;
  bool has_been_checked = 17;
  bool is_flapping = 18;
  int64 last_check = 19;
  State last_hard_state = 20;
  int64 last_hard_state_change = 21;
  int64 last_notification = 22;
  int32 notification_number = 23;
  int64 last_state_change = 24;
  int64 last_time_down = 25;
  int64 last_time_unreachable = 26;
  int64 last_time_up = 27;
  int64 last_update = 28;
  double latency = 29;
  int32 max_check_attempts = 30;
  int64 next_check = 31;
  int64 next_notification = 32;
  bool no_more_notifications = 33;
  bool notifications_enabled = 34;
  string output = 35;
  bool passive_checks_enabled = 36;
  double percent_state_change = 37;
  string perf_data = 38;
  double retry_interval = 39;
  bool should_be_scheduled = 40;
  bool obsess_over = 41;

  enum StateType {
    SOFT = 0;
    HARD = 1;
  }

  StateType state_type = 42;
  string action_url = 43;
  string address = 44;
  string alias = 45;
  bool check_freshness = 46;
  bool default_active_checks_enabled = 47;
  bool default_event_handler_enabled = 48;
  bool default_flap_detection_enabled = 49;
  bool default_notifications_enabled = 50;
  bool default_passive_checks_enabled = 51;
  string display_name = 52;
  double first_notification_delay = 53;
  bool flap_detection_on_down = 54;
  bool flap_detection_on_unreachable = 55;
  bool flap_detection_on_up = 56;
  double freshness_threshold = 57;
  double high_flap_threshold = 58;
  string host_name = 59;
  string icon_image = 60;
  string icon_image_alt = 61;
  int32 poller_id = 62;
  double low_flap_threshold = 63;
  string notes = 64;
  string notes_url = 65;
  double notification_interval = 66;
  string notification_period = 67;
  bool notify_on_down = 68;
  bool notify_on_flapping = 69;
  bool notify_on_recovery = 70;
  bool notify_on_unreachable = 71;
  bool stalk_on_down = 72;
  bool stalk_on_unreachable = 73;
  bool stalk_on_up = 74;
  string statusmap_image = 75;
  bool retain_nonstatus_information = 76;
  bool retain_status_information = 77;
  string timezone = 78;
}